# pinboard

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: README.md
src/pinboard/: cli.py  clip.py  config.py  file.py  file_operations.py  format.py  llm.py  ops.py  pin.py  shell.py  term.py  utils.py
