[tool.poetry]
name = "pinboard"
version = "0.1.0"
description = "A CLI tool for managing and editing file references using LLMs"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
pyclip = "^0.7.0"
platformdirs = "^3.5.0"
anthropic = "^0.30.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pin = "pinboard.cli:app"